@@ -412,14 +412,14 @@ update_main_menubar ()
 	gtk_widget_set_sensitive (dm->start_debug, !L);
 	gtk_widget_set_sensitive (dm->open_exec, A && R);
 	gtk_widget_set_sensitive (dm->load_core, A && R);
-	gtk_widget_set_sensitive (dm->attach, !A && R);
-	gtk_widget_set_sensitive (dm->restart, A && !Pr
+	gtk_widget_set_sensitive (dm->attach, A && R);
+	gtk_widget_set_sensitive (dm->restart, A && Pr
 				  && !debugger.prog_is_attached);
 	gtk_widget_set_sensitive (dm->stop_prog, A && Pr
 				  && !debugger.prog_is_attached);
 	gtk_widget_set_sensitive (dm->detach, A && R && Pr
 				  && debugger.prog_is_attached);
-	gtk_widget_set_sensitive (dm->cont, !A || (A && R));
+	gtk_widget_set_sensitive (dm->cont, A && R && Ld);
 	gtk_widget_set_sensitive (dm->run_to_cursor, A && R && Ld);
 	gtk_widget_set_sensitive (dm->step_in, A && R && Ld);
 	gtk_widget_set_sensitive (dm->step_over, A && R && Pr);
